# claude-master

./: .gitignore  CLAUDE.md  README.md  claude-dashboard.py  install.sh  pyproject.toml
docs/plans/: 2025-01-29-terminal-dashboard-design.md  2025-01-29-terminal-dashboard.md
scripts/: create-singlefile.py
src/claude_dashboard/: __main__.py  app.py  sidebar.py
src/claude_dashboard/config/: __init__.py  claude_config.py
src/claude_dashboard/screens/: __init__.py  agents.py  analytics.py  editor.py  github_import.py  marketplace.py  relationships.py  sessions.py  settings.py  shortcuts_help.py  skills.py
src/claude_dashboard/themes/: __init__.py  default.css  high_contrast.css  light.css
src/claude_dashboard/utils/: editor.py  frontmatter.py  path_utils.py  updater.py  usage_tracker.py
src/claude_dashboard/widgets/: __init__.py  command_palette.py  custom_header.py  line_numbers.py
src/claude_dashboard/widgets_modals/: __init__.py  create_modal.py  create_skill_wizard.py  skill_assignment.py
tests/: test_app.py  test_shortcuts_help.py
tests/claude_dashboard/themes/: test_theme_init.py
tests/config/: test_claude_config.py
tests/screens/: __init__.py  test_agents.py  test_marketplace.py  test_skills.py
tests/utils/: test_editor.py  test_frontmatter.py
tests/widgets/: __init__.py  test_line_numbers.py
