[project]
name = "claude-dashboard"
version = "0.1.0"
description = "Terminal dashboard for managing Claude Code configuration"
requires-python = ">=3.10"
dependencies = [
    "textual>=0.80.0",
    "pyyaml>=6.0",
    "watchdog>=4.0",
]

[project.scripts]
claude-dashboard = "claude_dashboard.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/claude_dashboard"]
