[project]
name = "claude-dashboard"
version = "0.1.0"
description = "Terminal dashboard for managing Claude Code configuration"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "textual>=0.80.0",
    "pyyaml>=6.0",
    "watchdog>=4.0",
]
authors = [
    {name = "Your Name", email = "your.email@example.com"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
    "Topic :: System :: Systems Administration",
]

[project.scripts]
claude-dashboard = "claude_dashboard.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/claude_dashboard"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
